2008-10-16  Glenn Morris  <rgm@gnu.org>

	* man.el (Man-getpage-in-background): Force recent `man's to output
	escape sequences even when stdout is not a tty.  (Bug#1142)

2008-10-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* international/mule-conf.el: Add `utf8' and `UTF8' as
	aliases for the `utf-8' coding system.

2008-10-15  Juanma Barranquero  <lekktu@gmail.com>

	* find-file.el (ff-get-file): Doc fix.
	(ff-get-file-name): Use `let', not `let*'.
	(ff-search-directories): Fix typo in docstring.
	(ff-pre-find-hook, ff-pre-load-hook, ff-post-load-hook)
	(ff-not-found-hook, ff-file-created-hook, ff-case-fold-search)
	(ff-always-in-other-window, ff-ignore-include, ff-always-try-to-create)
	(ff-quiet-mode, ff-other-file-alist, cc-search-directories)
	(cc-other-file-alist, modula2-other-file-alist):
	Remove spurious * in docstrings.

2008-10-14  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (set-face-attribute): Set family and foundry before
	other attributes.
	(face-spec-set-2): Pass unmodified args to set-face-attribute.

2008-10-14  Juanma Barranquero  <lekktu@gmail.com>

	* hl-line.el (hl-line-unload-function): New function.
	(hl-line-unhighlight, global-hl-line-unhighlight): Use `when'.
	(hl-line-sticky-flag): Remove spurious * in docstring.

2008-10-14  Eric Hanchrow  <offby1@blarg.net>  (tiny change)

	* vc-git.el (vc-git-show-log-entry): Include the revision in the
	search string.

2008-10-14  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-process-one-action): Embed regexp in
	parentheses, before adding end-of-buffer construct.  Suggested by
	Markus Triska <markus.triska@gmx.at>.

2008-10-13  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-plainview.el (w3m-toggle-inline-image):
	Define 'declare-function if necessary, for compatibility.

	* net/newst-treeview.el (w3m-toggle-inline-images):
	Define 'declare-function if necessary, for compatibility.

2008-10-13  Alan Mackenzie  <acm@muc.de>
